--- a/index.html
+++ b/index.html
@@ -1,6 +1,79 @@
 <!DOCTYPE html>
 <html>
-
-
-
+    <head>
+        <title>Website design system</title>
+        <link href="./resources/style.css" rel="stylesheet" type="text/css"> 
+    </head>
+<body>
+    <div class="header">
+        <h1>My website design system</h1>
+        <h2 class="subtitle">A Codecademy project by theLVP</h2>
+    </div>
+    <div class="content">
+        <div class="colours">
+            <h2>Colours</h2>
+            <h3>Rusty Bacon Orange</h3>
+                <p id="orange" class="colourtable">#db782a; rgb(2019,120,42)</p>
+            <h3>Deep Bluegreen-ish</h3>
+                <p id="bluegreen" class="colourtable">#08a08e, rgb(8,160,142)</p>
+            <h3>Ochre Yellow</h3>
+                <p id="yellow" class="colourtable">#e2bc00, rgb(226,188,0)</p>
+            <h3>Verdant Green</h3>
+                <p id="green" class="colourtable">#2e7d47, rgb(46,125,71)</p>
+        </div>
+        <div class="fonts"> 
+            <h2>Fonts</h2>
+            <div class="bebas">
+                <h3>Bebas Neue</h3>
+                <ul>
+                    <li class="light">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="plain">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="bold">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="italic">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                </ul>
+            </div>
+            <div class="yanone">
+                <h3>Yanone Kaffeesatz</h3>
+                <ul>
+                    <li class="light">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="plain">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="bold">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="italic">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                </ul>
+            </div>
+            <div class="helvetica">
+                <h3>Helvetica</h3>
+                <ul>
+                    <li class="light">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="plain">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="bold">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+                    <li class="italic">To seek out new life and new civilizations - To boldly go where no man has gone before.</li>
+            </div>
+        </div>
+        <div class="styles">
+            <h2>Specific text styles for page elements</h2>
+            <h1>H1 and H2: main page heading and subheading</h1>
+            <ul>
+                <li>Font-weight: <span class="bold">bold</span></li>
+                <li>Font-size: H1</li>
+                <li>Font-family: <span class='bebas'>Bebas Neue, sans serif</span></li>
+            </ul>
+            <h2>H2: content sub heading</h2>
+            <ul>
+                <li>Font-weight: <span id="boldunderline">bold,underlined</span></li>
+                <li>Font-size: H2</li>
+                <li>Font-family: <span class='helvetica'>Helvetica, sans serif</span></li>
+            </ul>
+            <p>p: paragraph text</p>
+            <ul>
+                <li>Font-weight: normal</li>
+                <li>Font-size: regular</li>
+                <li>Font-family: <span class='helvetica'>Helvetica, sans serif</span></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer">
+        &copy;theLVP2023
+    </div>
+</body>
 </html>
