--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
     <div class="content">
         <div class="colours">
             <h2>Colours</h2>
-            <h3>Rusty Bacon Orange</h3>
+            <div class="block">
+                <h3>Rusty Bacon Orange</h3>
                 <p id="orange" class="colourtable">#db782a; rgb(2019,120,42)</p>
-            <h3>Deep Bluegreen-ish</h3>
+            </div>
+            <div class="block">
+                <h3>Deep Bluegreen-ish</h3>
                 <p id="bluegreen" class="colourtable">#08a08e, rgb(8,160,142)</p>
-            <h3>Ochre Yellow</h3>
+            </div>
+            <div class="block">
+                <h3>Ochre Yellow</h3>
                 <p id="yellow" class="colourtable">#e2bc00, rgb(226,188,0)</p>
-            <h3>Verdant Green</h3>
+            </div>
+            <div class="block">
+                <h3>Verdant Green</h3>
                 <p id="green" class="colourtable">#2e7d47, rgb(46,125,71)</p>
+            </div>
         </div>
         <div class="fonts"> 
             <h2>Fonts</h2>
